# cryptology

./: .gitignore  Cargo.toml  Dockerfile  README.md  build.sh  ciphertext.txt  flake.nix  moon.yml  run.sh  rust-toolchain.docker.toml  rustfmt.toml  user.csv
.devcontainer/: Dockerfile
assets/1/: README.md
assets/2/: README.md  english_freq.txt
assets/3/: README.md  ciphertext.txt  english_freq.txt
assets/4/: README.md  english_bigram.txt
assets/5/: README.md  ciphertext-otp2.txt  key1.txt  key2.1.txt  key2.2.txt  key2.3.txt  key2.4.txt  (+5 more)
crates/cli/: Cargo.toml  moon.yml
crates/cli/src/: lib.rs
crates/cli/src/caesar/: mod.rs
crates/cli/src/caesar/assets/: input2.txt  output.txt  output2.txt
crates/cli/src/frequency_analysis/: mod.rs
crates/cli/src/frequency_analysis/assets/: input.txt  output.txt
crates/cli/src/frequency_analysis/bigrams/: mod.rs
crates/cli/src/frequency_analysis/frequencies/: english.rs  mod.rs
crates/cli/src/hash_collisions/: mod.rs
crates/cli/src/hex/: mod.rs
crates/cli/src/many_time_pad/: mod.rs
crates/cli/src/many_time_pad/assets/: ciphertext.txt  key.txt  plaintext.txt
crates/cli/src/monoalphabetic_substitution/: mod.rs  substitution_map.rs
crates/cli/src/monoalphabetic_substitution/assets/: input.txt  output.txt
crates/cli/src/one_time_pad/: mod.rs
crates/cli/src/one_time_pad/assets/: ciphertext-otp1.txt  output-otp1.txt  output-otp2.txt  plaintext-otp2.txt
crates/cli/src/vigenere/: mod.rs
crates/cli/src/vigenere/assets/: input1.txt  output.txt  output1.txt  output2.txt
crates/cli/src/xor/: mod.rs
(+20 files in other folders)
