[workspace]
resolver = "2"
members = ["crates/*", "crates/workspace"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.metadata.crane]
name = "cryptology"

[workspace.dependencies]
cryptology = { path = "./crates/cryptology" }
workspace = { path = "./crates/workspace" }
