[workspace]
resolver = "2"
members = ["crates/*", "crates/workspace"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Clemens Horn <me@clemenshorn.com>"]

[workspace.metadata.crane]
name = "cryptology"

[workspace.dependencies]
workspace = { path = "./crates/workspace" }
cryptology = { path = "./crates/cryptology" }
cli = { path = "./crates/cli" }
clap = { version = "4.5.20", features = ["derive", "help"] }
