[package]
name = "cli"
description = "Cryptology CLI tool for cryptographic operations"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
clap.workspace = true
rayon.workspace = true
rand.workspace = true
workspace = { version = "0.1", path = "../workspace" }
